# lists

./: LICENSE  README.md  pyproject.toml  test
.benchmarks/Linux-CPython-3.13-64bit/: 0001_master.json  0002_master.json  0002_sqlite-raw.json  0003_master.json  0004_dev.json
src/lists/: __init__.py  exceptions.py  list_manager.py  lists_manager.py  normalizer.py
tests/: conftest.py  test_list.py  test_list_benchmarks.py  test_lists.py  test_normalizer.py
