[project]
name = "lists"
version = "1.1.0"
description = "simple list view database"
readme = "README.md"
authors = [
    { name = "mikita" }
]
license = "MIT"
keywords = ["list", "lists", "database"]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "psutil>=7.0.0",
    "pygal>=3.0.5",
    "pytest>=8.4.1",
    "pytest-benchmark>=5.1.0",
]

[tool.pytest.ini_options]
addopts = "--benchmark-skip"
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = ["./src"]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(name)s %(levelname)s - %(message)s"
